fixing windows issues